package com.gymRagnarok.domain;

public enum TypeId {
	 CC,
	 TI,
	 CE
}
