package com.gymRagnarok.person.domain;

public enum Permission {
    READ,
    CREATE,
    UPDATE,
    VIEW_REPORTS,
    PROCESS_SALES
}
