package com.gymRagnarok.domain;

public class TrainingPlan {

}
