package com.gymRagnarok.person.dto;

public class CustomerDTO {

}
