@startuml 
title Diagrama de Dominio Gym

' ----- CLASES ----------
class Person{

}
enum TypeId{
}
enum Permission {

}
class PermissionManager {
    }
class Customer{

}
class User{

}
class Anamnesis{

}
class Detail{

}
class Membership{

}
enum TypeMembership{}

class TrainingPlan{

}
class Routine{

}
class Exercise{

}
class TrainingSession{

}
class Admin{

}
class Asistant{

}
interface IProduct{

}
class EdibleProduct{

}
class ClothingProduct{

}

abstract class Ifactory{  
}
class FactoryEdibleProduct{

}
class FactoryClothingProduct{

}
class InventaryGestion{

}
class CustomerGestion{

}
class FinancialGestion{
}
interface Gestion{

}
class Transaction{

}
class Report{

}
' ----- ENUMS -------------
enum Pay{

}
enum TypeTransaction{
    
}
enum TypeId{

}

'------ RELACIONES ---------
Person <|-- User
Person <|-- Customer
User <|-- Asistant
User <|-- Admin
Ifactory <|.. FactoryClothingProduct
Ifactory <|.. FactoryEdibleProduct
IProduct <|-- EdibleProduct
IProduct <|-- ClothingProduct
Gestion <|.. InventaryGestion
Gestion <|.. CustomerGestion
Gestion <|.. FinancialGestion
Customer o-- Anamnesis
Customer o-- Membership
Customer o-- TrainingPlan
Customer o-- TrainingSession
TrainingPlan o-- Routine
Report o-- Transaction
Routine o-- Exercise
Anamnesis *-- Detail
Detail*-- Detail
FactoryEdibleProduct --> EdibleProduct
FactoryClothingProduct --> ClothingProduct
InventaryGestion --> IProduct
CustomerGestion --> Customer

FinancialGestion --> Transaction
Transaction --> User
Transaction --> Customer
Transaction --> IProduct
Transaction --> Membership
Person --> TypeId
Membership --> TypeMembership
Transaction --> Pay
Transaction --> TypeTransaction

PermissionManager --> Permission
PermissionManager --> User
PermissionManager --> Gestion


' Definir la apariencia general
skinparam classAttributeIconSize 8
skinparam classFontSize 16
skinparam classFontName "Arial"
skinparam classBorderColor #212837
skinparam classHeaderFontColor #FFFFFF
skinparam classHeaderBackgroundColor #8BB9E6
skinparam classArrowColor #6E95C2
skinparam linetype ortho

' k
@enduml